monitoring/hello-devops-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"labels":{"app":"hello-devops"},"name":"hello-devops","namespace":"monitoring"},"spec":{"clusterIP":"10.43.15.171","clusterIPs":["10.43.15.171"],"internalTrafficPolicy":"Cluster","ipFamilies":["IPv4"],"ipFamilyPolicy":"SingleStack","ports":[{"name":"http","port":8000,"protocol":"TCP","targetPort":8000}],"selector":{"app":"hello-devops"},"sessionAffinity":"None","type":"ClusterIP"}}
  labels:
    app: hello-devops
  name: hello-devops
  namespace: monitoring
spec:
  - 10.43.15.171
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: http
    port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    app: hello-devops
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
