monitoring/prometheus-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"name":"prometheus","namespace":"monitoring"},"spec":{"clusterIP":"10.43.88.34","clusterIPs":["10.43.88.34"],"internalTrafficPolicy":"Cluster","ipFamilies":["IPv4"],"ipFamilyPolicy":"SingleStack","ports":[{"name":"web","port":9090,"protocol":"TCP","targetPort":9090}],"selector":{"app":"prometheus"},"sessionAffinity":"None","type":"ClusterIP"}}
  name: prometheus
  namespace: monitoring
spec:
  - 10.43.88.34
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: web
    port: 9090
    protocol: TCP
    targetPort: 9090
  selector:
    app: prometheus
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
