monitoring/uptime-kuma-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: uptime-kuma
  name: uptime-kuma
  namespace: monitoring
spec:
  - 10.43.52.148
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: http
    port: 3001
    protocol: TCP
    targetPort: 3001
  selector:
    app: uptime-kuma
  sessionAffinity: None
  type: ClusterIP
